--- a/mcp-client/src/main/resources/application.yml
+++ b/mcp-client/src/main/resources/application.yml
@@ -10,6 +10,16 @@ spring:
       chat:
         options:
           model: ${OPENAI_MODEL}
+    vectorstore:
+      redis:
+        initialize-schema: true         # 是否初始化所需的模式
+        index-name: lee-vectorstore     # 用于存储向量的索引名称
+        prefix: 'embedding:'
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 6379
+      password: 123456
 
 logging:
   level:
