--- a/mcp-client/src/main/resources/application.yml
+++ b/mcp-client/src/main/resources/application.yml
@@ -24,3 +24,9 @@ spring:
 logging:
   level:
     root: info
+
+internet:
+  websearch:
+    searxng:
+      url: http://localhost:6080/search
+      counts: 8
