--- a/mcp-client/pom.xml
+++ b/mcp-client/pom.xml
@@ -66,6 +66,16 @@
             <artifactId>spring-ai-starter-model-transformers</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-starter-mcp-client</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-mcp</artifactId>
+        </dependency>
+
         <!--解析文档-->
         <dependency>
             <groupId>org.springframework.ai</groupId>
