--- a/mcp-client/src/main/resources/application-prod.yml
+++ b/mcp-client/src/main/resources/application-prod.yml
@@ -2,4 +2,32 @@ server:
   port: 9999
 
 website:
-  domin: 172.27.104.214:5501
+  domin:  47.250.95.26
+
+
+spring:
+  ai:
+    mcp:
+      client:
+        enabled: true
+        name: spring-ai-mcp-client-1.0.0
+        type: ASYNC
+        sse:
+          connections:
+            server1:
+              url: https://mcp.amap.com
+              sse-endpoint: /sse?key=a02b57dc24a5fb557d4bad11345a97cb
+            server2:
+              url: http://172.28.23.84:9060
+              sse-endpoint: /sse
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 9379
+      password: yaoyian
+
+internet:
+  websearch:
+    searxng:
+      url: http://172.28.23.84:6080/search
+      counts: 8
