--- a/mcp-client/src/main/resources/.env_deepseek
+++ b/mcp-client/src/main/resources/.env_deepseek
@@ -1,3 +1,3 @@
-OPENAI_API_KEY=sk-4e8f3a22f68f46e09bf3a2620c0e53c5
+OPENAI_API_KEY=
 OPENAI_BASE_URL=https://api.deepseek.com
 OPENAI_MODEL=deepseek-chat
