--- a/mcp-client/src/main/resources/.env_qwen
+++ b/mcp-client/src/main/resources/.env_qwen
@@ -1,3 +1,3 @@
-OPENAI_API_KEY=sk-7751fcf65787436e97b594de47a9053d
+OPENAI_API_KEY=
 OPENAI_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode
 OPENAI_MODEL=qwen-plus-latest
